feat: 添加数据库初始化脚本并优化分表创建逻辑
添加init-database.js脚本用于初始化数据库环境
修改create-order-sharding-tables.js使用预定义表结构替代动态生成
更新docker-compose.yml中的MySQL配置
在package.json中添加db:init命令
删除无用的query文件

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,12 @@ services:
   # MySQL数据库服务
   mysql:
     image: mysql:8.0
-    container_name: mall-eco-mysql
+    container_name: malleco-mysql
     ports:
       - "3306:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=mall_eco_api
+      - MYSQL_ROOT_PASSWORD=qwerty123
+      - MYSQL_DATABASE=malleco_api
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql/init:/docker-entrypoint-initdb.d
