--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:init": "node init-database.js"
+    "db:init": "node DB/init-database.js"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^9.2.0",
