--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,12 @@
     "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": false,
-    "strict": false,
+    "noFallthroughCasesInSwitch": true,
+    "strict": true,
     "esModuleInterop": true
   },
   "exclude": [
