--- a/config/.env
+++ b/config/.env
@@ -3,10 +3,10 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=qwerty123
-DB_NAME=malleco
+DB_NAME=malleco  # 使用默认的mysql数据库
 DB_CHARSET=utf8mb4
 DB_SYNCHRONIZE=false
-DB_LOGGING=true
+DB_LOGGING=false
 # 数据库连接池配置
 DB_CONNECTION_LIMIT=20
 DB_MAX_POOL_SIZE=50
@@ -44,7 +44,7 @@ ELASTICSEARCH_USERNAME=malleco
 ELASTICSEARCH_PASSWORD=malleco
 
 # Server Config
-PORT=3001
+PORT=9000
 HOST=0.0.0.0
 SERVICE_NAME=malleco-api
 SERVICE_ADDRESS=localhost
