--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/passport-local": "^1.0.38",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
     "axios": "^1.13.2",
@@ -56,6 +57,7 @@
     "mysql2": "^3.15.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "prom-client": "^15.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
