refactor: 重构基础实体和模块结构  feat(app): 修改getHello返回类型为object并添加详细API信息 style: 修复多个实体文件末尾缺少换行符的问题 refactor(rbac): 调整用户和权限实体字段注释 refactor(microservices): 更新服务部署和依赖实体的更新时间字段 fix(system): 添加system-config实体的active字段 refactor: 移动base.entity到src/common目录并更新引用 chore: 删除无用脚本和文档文件 refactor(test): 更新测试文件中的supertest导入方式 refactor(tsconfig): 更新路径映射配置

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,12 @@
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": ".",
+    "baseUrl": "./src",
+    "paths": {
+      "*": ["*"],
+      "../../../../common/base.entity": ["common/base.entity"],
+      "../../../common/base.entity": ["common/base.entity"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -22,28 +27,7 @@
     "strictPropertyInitialization": false
   },
   "exclude": [
-    "src/modules/promotion",
-    "src/modules/promotion.disabled",
-    "src/modules/statistics",
-    "src/modules/distribution",
-    "src/modules/distribution.disabled2",
-    "src/modules/live",
-    "src/modules/order",
-    "src/modules/member",
-    "src/modules/goods",
-    "src/modules/wallet",
-    "src/modules/payment",
-    "src/modules/aftersale",
-    "src/modules/logistics",
-    "src/modules/evaluation",
-    "src/modules/points",
-    "src/modules/product",
-    "src/modules/microservices",
-    "src/modules/service-mesh",
-    "src/modules/database",
-    "src/modules/system",
-    "src/modules/recommendation",
-    "src/cache",
-    "src/shared"
+    "node_modules",
+    "dist"
   ]
 }
