--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/microservices": "^11.1.9",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.9",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.3",
     "@nestjs/terminus": "^11.0.0",
@@ -40,13 +40,15 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/passport-local": "^1.0.38",
+    "alipay-sdk": "^4.14.0",
+    "aliyun-sdk-v2": "^2.12.6",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "cache-manager": "^7.2.7",
-    "canvas": "^3.1.0",
+    "canvas": "^3.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "consul": "^2.0.1",
@@ -54,7 +56,9 @@
     "dotenv": "^17.2.3",
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.8.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -64,6 +68,7 @@
     "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
+    "wechatpay-node-v3": "^2.2.1",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
     "winston-elasticsearch": "^0.17.0"
