refactor: 统一用户模块命名并修复相关引用
修复用户模块命名不一致问题，将UserModule统一改为UsersModule
更新通知模块和反馈模块中对用户模块的引用
在物流实体中添加pluginName字段
为用户服务添加findAllUsers方法
移除.env文件中冗余的注释

--- a/config/.env
+++ b/config/.env
@@ -3,7 +3,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=qwerty123
-DB_NAME=malleco  # 使用默认的mysql数据库
+DB_NAME=malleco
 DB_CHARSET=utf8mb4
 DB_SYNCHRONIZE=false
 DB_LOGGING=false
