refactor(after-sales): 修改售后模块相关ID字段类型为字符串  - 将订单ID和用户ID类型由number改为string，保证数据一致性 - 替换导入路径，将order模块替换为orders模块，user模块替换为users模块 - 修正售后服务创建与查询接口中ID类型 - 调整订单状态判断逻辑，兼容更新后的状态字段名称和状态码  refactor(email): 优化邮件控制器返回结果的封装  - 统一使用ApiResponseDto返回成功和失败响应 - 优化邮件验证码发送、验证接口的返回格式 - 优化邮件发送、发送记录及模板列表接口的返回格式  refactor(feedback): 优化反馈模块类型转换及导入路径  - 调整反馈状态更新方法中状态参数类型转换 - 修改认证及用户相关装饰器和守卫的导入路径 - 修改Role枚举的导入路径指向正确的users模块  refactor(logistics): 修改物流控制器请求参数ID类型  - 将物流相关接口路由参数ID类型由number改为string，统一参数类型及兼容性  chore(deps): 添加阿里云SDK依赖及环境变量配置  - 在package.json和package-lock.json中新增@alicloud/pop-core依赖 - 在环境变量配置文件新增支付宝、阿里云短信、腾讯云短信、微信、公众号、腾讯云及物流相关配置项

--- a/config/.env
+++ b/config/.env
@@ -14,6 +14,33 @@ DB_IDLE_TIMEOUT=30000
 DB_ACQUIRE_TIMEOUT=60000
 DB_REAP_INTERVAL=1000
 
+# 支付宝配置
+ALIPAY_APP_ID=your_alipay_app_id
+ALIPAY_PRIVATE_KEY=your_alipay_private_key
+ALIPAY_PUBLIC_KEY=your_alipay_public_key
+
+# 阿里云短信配置
+ALIYUN_ACCESS_KEY_ID=your_aliyun_access_key_id
+ALIYUN_ACCESS_KEY_SECRET=your_aliyun_access_key_secret
+ALIYUN_SIGN_NAME=your_aliyun_sign_name
+ALIYUN_TEMPLATE_CODE=your_aliyun_template_code
+
+#腾讯云短信配置
+TENCENT_CLOUD_SMS_APP_ID=your_tencent_cloud_sms_app_id
+TENCENT_CLOUD_SMS_APP_KEY=your_tencent_cloud_sms_app_key
+
+#微信配置
+WECHAT_APP_ID=your_wechat_app_id
+WECHAT_APP_SECRET=your_wechat_app_secret
+
+#公众号配置
+WECHAT_PUBLIC_ACCOUNT_ID=your_wechat_public_account_id
+WECHAT_PUBLIC_ACCOUNT_SECRET=your_wechat_public_account_secret
+
+#腾讯云配置
+TENCENT_CLOUD_APP_ID=your_tencent_cloud_app_id
+TENCENT_CLOUD_APP_KEY=your_tencent_cloud_app_key
+
 # Redis配置
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -22,6 +49,10 @@ REDIS_DB=0
 REDIS_CONNECTION_TIMEOUT=10000
 REDIS_LIFO=true
 REDIS_MAX_RETRIES_PER_REQUEST=3
+
+#物流配置
+LOGISTICS_APP_ID=your_logistics_app_id
+LOGISTICS_APP_KEY=your_logistics_app_key
 
 # 缓存配置
 CACHE_TTL=3600
