--- a/config/.env
+++ b/config/.env
@@ -32,6 +32,8 @@ TENCENT_CLOUD_SMS_APP_KEY=your_tencent_cloud_sms_app_key
 #微信配置
 WECHAT_APP_ID=your_wechat_app_id
 WECHAT_APP_SECRET=your_wechat_app_secret
+WECHAT_MCHID=your_wechat_mchid
+WECHAT_NOTIFY_URL=https://example.com/payment/callback/wechatpay
 
 #公众号配置
 WECHAT_PUBLIC_ACCOUNT_ID=your_wechat_public_account_id
