--- a/config/.env
+++ b/config/.env
@@ -93,3 +93,62 @@ RABBITMQ_ENABLED=false
 RABBITMQ_URL=amqp://localhost:5672
 # RabbitMQ队列名称
 RABBITMQ_QUEUE=malleco_queue
+
+# 基本环境配置
+NODE_ENV=development
+
+# JWT扩展配置
+JWT_EXPIRES_IN=3600
+JWT_REFRESH_SECRET=your-refresh-secret-key
+JWT_REFRESH_EXPIRES_IN=604800
+
+# 数据库扩展配置
+DB_DATABASE=malleco
+
+# CORS配置
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+CORS_CREDENTIALS=true
+
+# 缓存扩展配置
+CACHE_STORE=memory
+CACHE_MAX=100
+
+# 文件上传配置
+UPLOAD_PATH=uploads
+
+# 支付宝扩展配置
+ALIPAY_GATEWAY=https://openapi.alipay.com/gateway.do
+
+# 微信扩展配置
+WECHAT_APPID=your_wechat_app_id
+
+# API性能配置
+API_SLOW_THRESHOLD=1000
+API_SAMPLE_RATE=1.0
+API_MAX_RESPONSE_TIME=30000
+
+# Redis扩展配置
+REDIS_LAZY_CONNECT=false
+
+# 安全配置
+BCRYPT_ROUNDS=12
+
+# 限流配置
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX=100
+
+# 压缩配置
+COMPRESSION_LEVEL=6
+
+# 监控配置
+MONITORING_ENABLED=false
+METRICS_INTERVAL=30000
+
+# 告警配置
+ALERT_CPU_THRESHOLD=80
+ALERT_MEMORY_THRESHOLD=85
+ALERT_RESPONSE_TIME_THRESHOLD=2000
+
+# Nacos配置
+NACOS_SERVER_ADDR=localhost:8848
+NACOS_NAMESPACE=
