docs(config): 为环境变量添加注释说明  为所有环境变量配置添加详细的中文注释，方便开发者理解各配置项的作用和用途

--- a/config/.env
+++ b/config/.env
@@ -1,154 +1,152 @@
 # 数据库配置
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=qwerty123
-DB_NAME=malleco
-DB_CHARSET=utf8mb4
-DB_SYNCHRONIZE=false
-DB_LOGGING=false
+DB_HOST=localhost                      # 数据库主机地址
+DB_PORT=3306                           # 数据库端口
+DB_USERNAME=root                       # 数据库用户名
+DB_PASSWORD=qwerty123                  # 数据库密码
+DB_NAME=malleco                        # 数据库名称
+DB_CHARSET=utf8mb4                     # 数据库字符集
+DB_SYNCHRONIZE=false                   # 是否自动同步数据库结构（生产环境建议关闭）
+DB_LOGGING=false                       # 是否启用数据库查询日志
+
 # 数据库连接池配置
-DB_CONNECTION_LIMIT=20
-DB_MAX_POOL_SIZE=50
-DB_IDLE_TIMEOUT=30000
-DB_ACQUIRE_TIMEOUT=60000
-DB_REAP_INTERVAL=1000
+DB_CONNECTION_LIMIT=20                 # 数据库连接池最大连接数
+DB_MAX_POOL_SIZE=50                    # 数据库连接池最大大小
+DB_IDLE_TIMEOUT=30000                  # 连接空闲超时时间（毫秒）
+DB_ACQUIRE_TIMEOUT=60000               # 获取连接超时时间（毫秒）
+DB_REAP_INTERVAL=1000                  # 连接回收间隔时间（毫秒）
 
 # 支付宝配置
-ALIPAY_APP_ID=your_alipay_app_id
-ALIPAY_PRIVATE_KEY=your_alipay_private_key
-ALIPAY_PUBLIC_KEY=your_alipay_public_key
+ALIPAY_APP_ID=your_alipay_app_id       # 支付宝应用ID
+ALIPAY_PRIVATE_KEY=your_alipay_private_key  # 支付宝商户私钥
+ALIPAY_PUBLIC_KEY=your_alipay_public_key    # 支付宝公钥
 
 # 阿里云短信配置
-ALIYUN_ACCESS_KEY_ID=your_aliyun_access_key_id
-ALIYUN_ACCESS_KEY_SECRET=your_aliyun_access_key_secret
-ALIYUN_SIGN_NAME=your_aliyun_sign_name
-ALIYUN_TEMPLATE_CODE=your_aliyun_template_code
+ALIYUN_ACCESS_KEY_ID=your_aliyun_access_key_id  # 阿里云访问密钥ID
+ALIYUN_ACCESS_KEY_SECRET=your_aliyun_access_key_secret  # 阿里云访问密钥Secret
+ALIYUN_SIGN_NAME=your_aliyun_sign_name        # 阿里云短信签名
+ALIYUN_TEMPLATE_CODE=your_aliyun_template_code  # 阿里云短信模板ID
 
-#腾讯云短信配置
-TENCENT_CLOUD_SMS_APP_ID=your_tencent_cloud_sms_app_id
-TENCENT_CLOUD_SMS_APP_KEY=your_tencent_cloud_sms_app_key
+# 腾讯云短信配置
+TENCENT_CLOUD_SMS_APP_ID=your_tencent_cloud_sms_app_id  # 腾讯云短信应用ID
+TENCENT_CLOUD_SMS_APP_KEY=your_tencent_cloud_sms_app_key  # 腾讯云短信应用密钥
 
-#微信配置
-WECHAT_APP_ID=your_wechat_app_id
-WECHAT_APP_SECRET=your_wechat_app_secret
-WECHAT_MCHID=your_wechat_mchid
-WECHAT_NOTIFY_URL=https://example.com/payment/callback/wechatpay
+# 微信配置
+WECHAT_APP_ID=your_wechat_app_id       # 微信公众号/小程序AppID
+WECHAT_APP_SECRET=your_wechat_app_secret  # 微信公众号/小程序AppSecret
+WECHAT_MCHID=your_wechat_mchid         # 微信支付商户号
+WECHAT_NOTIFY_URL=https://example.com/payment/callback/wechatpay  # 微信支付回调地址
 
-#公众号配置
-WECHAT_PUBLIC_ACCOUNT_ID=your_wechat_public_account_id
-WECHAT_PUBLIC_ACCOUNT_SECRET=your_wechat_public_account_secret
+# 公众号配置
+WECHAT_PUBLIC_ACCOUNT_ID=your_wechat_public_account_id  # 微信公众号原始ID
+WECHAT_PUBLIC_ACCOUNT_SECRET=your_wechat_public_account_secret  # 微信公众号AppSecret
 
-#腾讯云配置
-TENCENT_CLOUD_APP_ID=your_tencent_cloud_app_id
-TENCENT_CLOUD_APP_KEY=your_tencent_cloud_app_key
+# 腾讯云配置
+TENCENT_CLOUD_APP_ID=your_tencent_cloud_app_id  # 腾讯云应用ID
+TENCENT_CLOUD_APP_KEY=your_tencent_cloud_app_key  # 腾讯云应用密钥
 
 # Redis配置
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
-REDIS_CONNECTION_TIMEOUT=10000
-REDIS_LIFO=true
-REDIS_MAX_RETRIES_PER_REQUEST=3
+REDIS_HOST=localhost                   # Redis主机地址
+REDIS_PORT=6379                        # Redis端口
+REDIS_PASSWORD=                        # Redis密码（无密码则留空）
+REDIS_DB=0                             # Redis数据库索引
+REDIS_CONNECTION_TIMEOUT=10000         # Redis连接超时时间（毫秒）
+REDIS_LIFO=true                        # Redis是否使用后进先出策略
+REDIS_MAX_RETRIES_PER_REQUEST=3        # Redis每个请求最大重试次数
 
-#物流配置
-LOGISTICS_APP_ID=your_logistics_app_id
-LOGISTICS_APP_KEY=your_logistics_app_key
+# 物流配置
+LOGISTICS_APP_ID=your_logistics_app_id  # 物流服务应用ID
+LOGISTICS_APP_KEY=your_logistics_app_key  # 物流服务应用密钥
 
 # 缓存配置
-CACHE_TTL=3600
-CACHE_MAX_ITEMS=10000
-CACHE_CHECK_PERIOD=600
+CACHE_TTL=3600                         # 缓存默认过期时间（秒）
+CACHE_MAX_ITEMS=10000                  # 缓存最大项目数
+CACHE_CHECK_PERIOD=600                 # 缓存清理周期（秒）
 
 # 性能优化配置
-MAX_REQUEST_SIZE=10mb
-COMPRESSION_THRESHOLD=1kb
-RATE_LIMIT_WINDOW=60000
-RATE_LIMIT_MAX=1000
+MAX_REQUEST_SIZE=10mb                  # 最大请求体大小
+COMPRESSION_THRESHOLD=1kb              # 响应压缩阈值
+RATE_LIMIT_WINDOW=60000                # 限流时间窗口（毫秒）
+RATE_LIMIT_MAX=1000                    # 限流时间窗口内最大请求数
 
 # JWT配置
-JWT_SECRET=MallEcoJwtSecretKey123456
-JWT_EXPIRATION=7d
+JWT_SECRET=MallEcoJwtSecretKey123456   # JWT签名密钥
+JWT_EXPIRATION=7d                      # JWT令牌过期时间
 
 # Elasticsearch配置
-ELASTICSEARCH_NODE=http://localhost:9200
-ELASTICSEARCH_USERNAME=malleco
-ELASTICSEARCH_PASSWORD=malleco
+ELASTICSEARCH_NODE=http://localhost:9200  # Elasticsearch节点地址
+ELASTICSEARCH_USERNAME=malleco         # Elasticsearch用户名
+ELASTICSEARCH_PASSWORD=malleco         # Elasticsearch密码
 
-# Server Config
-PORT=9000
-HOST=0.0.0.0
-SERVICE_NAME=malleco-api
-SERVICE_ADDRESS=localhost
+# 服务器配置
+PORT=9000                              # 服务器端口
+HOST=0.0.0.0                           # 服务器绑定地址
+SERVICE_NAME=malleco-api               # 服务名称
+SERVICE_ADDRESS=localhost              # 服务地址
 
-# Consul Config
-CONSUL_HOST=localhost
-CONSUL_PORT=8500
+# Consul配置
+CONSUL_HOST=localhost                  # Consul服务器地址
+CONSUL_PORT=8500                       # Consul服务器端口
 
-# RabbitMQ Config
-# 启用RabbitMQ功能 (true/false)
-RABBITMQ_ENABLED=false
-# RabbitMQ服务器连接URL
-RABBITMQ_URL=amqp://localhost:5672
-# RabbitMQ队列名称
-RABBITMQ_QUEUE=malleco_queue
+# RabbitMQ配置
+RABBITMQ_ENABLED=false                 # 是否启用RabbitMQ功能（true/false）
+RABBITMQ_URL=amqp://localhost:5672     # RabbitMQ服务器连接URL
+RABBITMQ_QUEUE=malleco_queue           # RabbitMQ队列名称
 
 # 基本环境配置
-NODE_ENV=development
+NODE_ENV=development                   # 环境类型（development/production/test）
 
 # JWT扩展配置
-JWT_EXPIRES_IN=3600
-JWT_REFRESH_SECRET=your-refresh-secret-key
-JWT_REFRESH_EXPIRES_IN=604800
+JWT_EXPIRES_IN=3600                    # JWT访问令牌过期时间（秒）
+JWT_REFRESH_SECRET=your-refresh-secret-key  # JWT刷新令牌签名密钥
+JWT_REFRESH_EXPIRES_IN=604800          # JWT刷新令牌过期时间（秒）
 
 # 数据库扩展配置
-DB_DATABASE=malleco
+DB_DATABASE=malleco                    # 数据库名称（与DB_NAME功能相同，兼容不同配置文件）
 
 # CORS配置
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
-CORS_CREDENTIALS=true
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001  # 允许的跨域来源（多个地址用逗号分隔）
+CORS_CREDENTIALS=true                  # 是否允许发送Cookie等凭证信息
 
 # 缓存扩展配置
-CACHE_STORE=memory
-CACHE_MAX=100
+CACHE_STORE=memory                     # 缓存存储类型（memory/redis）
+CACHE_MAX=100                          # 内存缓存最大项目数
 
 # 文件上传配置
-UPLOAD_PATH=uploads
+UPLOAD_PATH=uploads                    # 文件上传存储路径
 
 # 支付宝扩展配置
-ALIPAY_GATEWAY=https://openapi.alipay.com/gateway.do
+ALIPAY_GATEWAY=https://openapi.alipay.com/gateway.do  # 支付宝API网关地址
 
 # 微信扩展配置
-WECHAT_APPID=your_wechat_app_id
+WECHAT_APPID=your_wechat_app_id        # 微信AppID（与WECHAT_APP_ID功能相同，兼容不同配置文件）
 
 # API性能配置
-API_SLOW_THRESHOLD=1000
-API_SAMPLE_RATE=1.0
-API_MAX_RESPONSE_TIME=30000
+API_SLOW_THRESHOLD=1000                # API慢请求阈值（毫秒）
+API_SAMPLE_RATE=1.0                    # API性能采样率（0-1之间）
+API_MAX_RESPONSE_TIME=30000            # API最大响应时间限制（毫秒）
 
 # Redis扩展配置
-REDIS_LAZY_CONNECT=false
+REDIS_LAZY_CONNECT=false               # 是否启用Redis懒加载连接
 
 # 安全配置
-BCRYPT_ROUNDS=12
+BCRYPT_ROUNDS=12                       # BCrypt密码加密迭代次数
 
-# 限流配置
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX=100
+# 限流扩展配置
+RATE_LIMIT_WINDOW_MS=900000            # 限流时间窗口（毫秒，与RATE_LIMIT_WINDOW功能相同）
+RATE_LIMIT_MAX=100                     # 限流时间窗口内最大请求数（与RATE_LIMIT_MAX功能相同）
 
-# 压缩配置
-COMPRESSION_LEVEL=6
+# 压缩扩展配置
+COMPRESSION_LEVEL=6                    # 响应压缩级别（1-9，级别越高压缩率越高但CPU消耗越大）
 
 # 监控配置
-MONITORING_ENABLED=false
-METRICS_INTERVAL=30000
+MONITORING_ENABLED=false               # 是否启用系统监控
+METRICS_INTERVAL=30000                 # 监控指标采集间隔（毫秒）
 
 # 告警配置
-ALERT_CPU_THRESHOLD=80
-ALERT_MEMORY_THRESHOLD=85
-ALERT_RESPONSE_TIME_THRESHOLD=2000
+ALERT_CPU_THRESHOLD=80                 # CPU使用率告警阈值（%）
+ALERT_MEMORY_THRESHOLD=85              # 内存使用率告警阈值（%）
+ALERT_RESPONSE_TIME_THRESHOLD=2000     # API响应时间告警阈值（毫秒）
 
 # Nacos配置
-NACOS_SERVER_ADDR=localhost:8848
-NACOS_NAMESPACE=
+NACOS_SERVER_ADDR=localhost:8848       # Nacos服务器地址和端口
+NACOS_NAMESPACE=                       # Nacos命名空间（留空使用默认命名空间）
