feat: 添加基础模块和控制器  refactor: 重构服务网格实体字段类型  style: 更新CORS配置和静态资源路径  docs: 添加静态资源迁移说明文档  chore: 配置环境变量和依赖项

--- a/config/.env
+++ b/config/.env
@@ -104,7 +104,7 @@ JWT_REFRESH_EXPIRES_IN=604800          # JWT刷新令牌过期时间（秒）
 DB_DATABASE=malleco                    # 数据库名称（与DB_NAME功能相同，兼容不同配置文件）
 
 # CORS配置
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001  # 允许的跨域来源（多个地址用逗号分隔）
+CORS_ORIGIN=http://localhost:3000,http://localhost:3001,http://localhost:10000,http://localhost:10002,http://localhost:10003  # 允许的跨域来源（多个地址用逗号分隔）
 CORS_CREDENTIALS=true                  # 是否允许发送Cookie等凭证信息
 
 # 缓存扩展配置
