feat: 添加商品、优惠券和购物车功能模块  - 新增商品模块，包含商品详情、列表、分类等功能 - 新增优惠券模块，包含优惠券领取、使用等功能 - 重构购物车服务，完善增删改查和结算功能 - 更新构建配置和脚本，支持模块化开发 - 调整模块导入关系，确保功能模块正确加载

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,9 +2,8 @@
   "extends": "./tsconfig.json",
   "include": [
     "src/**/*",
-    "!src/modules/**/*",
     "!src/modules/promotion.disabled/**/*",
-    "src/modules/rbac/**/*"
+    "src/modules/**/*"
   ],
   "exclude": [
     "node_modules",
