refactor: 将上传文件路径改为public/uploads目录  修改了.env配置文件和file.module.ts中的文件上传路径，从原来的uploads改为public/uploads目录，以更好地组织静态资源文件结构。同时删除了不再使用的application-config.yml配置文件。

--- a/config/.env
+++ b/config/.env
@@ -112,7 +112,7 @@ CACHE_STORE=memory                     # 缓存存储类型（memory/redis）
 CACHE_MAX=100                          # 内存缓存最大项目数
 
 # 文件上传配置
-UPLOAD_PATH=uploads                    # 文件上传存储路径
+UPLOAD_PATH=public/uploads                    # 文件上传存储路径
 
 # 支付宝扩展配置
 ALIPAY_GATEWAY=https://openapi.alipay.com/gateway.do  # 支付宝API网关地址
