feat(wechat): 新增微信公众号管理模块  新增微信公众号管理模块，包含以下功能： - 基础配置管理 - 粉丝管理 - 消息模板管理 - H5页面管理 - 优惠券管理 - 素材管理 - 菜单管理 - 授权管理 - 订阅消息管理  添加相关实体、DTO、服务、控制器及模块配置

--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:init": "node DB/init-database.js"
+    "db:init": "node DB/database-manager.js init",
+    "db:update": "node DB/database-manager.js update",
+    "db:health": "node DB/database-manager.js health",
+    "menu:init": "node scripts/init-menu.js init",
+    "menu:tree": "node scripts/init-menu.js tree",
+    "menu:stats": "node scripts/init-menu.js stats",
+    "wechat:show": "node scripts/show-wechat-menu.js tree",
+    "wechat:summary": "node scripts/show-wechat-menu.js summary",
+    "wechat:api": "node scripts/show-wechat-menu.js api"
   },
   "dependencies": {
     "@alicloud/pop-core": "^1.8.0",
