feat(DB): 重构数据库管理模块并添加新功能  refactor: 简化数据库管理入口文件结构 feat: 添加数据库配置服务和README文档 chore: 更新mysql2依赖至3.16.0版本 fix: 移除未使用的SQL脚本文件 style: 调整页面数据服务中的轮播图配置

--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:init": "node DB/database-manager.js init",
-    "db:update": "node DB/database-manager.js update",
-    "db:health": "node DB/database-manager.js health",
+    "db:init": "node DB/index.js init",
+    "db:setup": "node DB/index.js setup",
+    "db:health": "node DB/index.js health",
+    "db:status": "node DB/index.js status",
+    "db:upgrade": "node DB/index.js upgrade",
     "menu:init": "node scripts/init-menu.js init",
     "menu:tree": "node scripts/init-menu.js tree",
     "menu:stats": "node scripts/init-menu.js stats",
@@ -68,7 +70,7 @@
     "elasticsearch": "^16.7.3",
     "ioredis": "^5.8.2",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3",
+    "mysql2": "^3.16.0",
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
