--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "wechatpay-node-v3": "^2.2.1",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0",
-    "winston-elasticsearch": "^0.17.0"
+    "winston-elasticsearch": "^0.17.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -109,6 +110,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
